[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
once_cell = "1.18.0"
ratatui = "0.23.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"

