[package]
name = "tools"
version = "0.1.0"
edition = "2021"
authors = ["Diana Moore <dmoore@xn4p4lm.com>"]
description = "A collection of tools for the terminal."
license = "mpl-2.0"
repository = "https://github.com/xn4p4lm-org/tools"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
once_cell = "1.18.0"
ratatui = "0.23.0"
semver = "1.0.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"

